boreal/tests/assets/invalid_files/compilation/invalid_include.yar
import "pe"

rule a {
    condition: true
}

include "./do-not-exist.yar"
